--- a/frontend_ranmil44/src/app/modules/procesos/asignacionConsumo/component/asignacion-consumo.component.html
+++ b/frontend_ranmil44/src/app/modules/procesos/asignacionConsumo/component/asignacion-consumo.component.html
@@ -3,7 +3,7 @@
 
 <div class="card shadow-6 mt-4">
     <h2 class="card-title flex justify-content-center">
-        <strong>REGISTRO DE VALORES</strong>
+        <strong>ASIGNACIÓN DE CONSUMO</strong>
     </h2>
 
     <div class="card shadow-2 p-3 m-3">
