--- a/frontend_ranmil44/src/app/modules/reportes/reporteMensual/component/reporte-mensual.component.html
+++ b/frontend_ranmil44/src/app/modules/reportes/reporteMensual/component/reporte-mensual.component.html
@@ -1,1 +1,8 @@
-<p>reporte-mensual works!</p>
+<p-toast></p-toast>
+<p-confirmDialog></p-confirmDialog>
+
+<div class="card shadow-6 mt-4">
+    <h2 class="card-title flex justify-content-center">
+        <strong>REPORTE MENSUAL - RECIBO</strong>
+    </h2>
+</div>
