--- a/frontend_ranmil44/src/styles.scss
+++ b/frontend_ranmil44/src/styles.scss
@@ -40,7 +40,7 @@ input:disabled {
 }
 
 .card-title {
-    background-color: #cf0a2c !important;
+    background-color: #065674 !important;
     color: #ffffff !important;
     padding: 1rem;
     margin-bottom: 2rem;
