--- a/frontend_ranmil44/src/app/modules/procesos/registroConfronta/component/registro-confronta.component.html
+++ b/frontend_ranmil44/src/app/modules/procesos/registroConfronta/component/registro-confronta.component.html
@@ -1,7 +1,7 @@
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
 
-<div class="card shadow-6 mt-4">
+<div class="card shadow-6">
     <h2 class="card-title flex justify-content-center">
         <strong>REGISTRO DEL CONSUMO</strong>
     </h2>
