--- a/frontend_ranmil44/src/app/modules/dashboard/component/dashboard.component.html
+++ b/frontend_ranmil44/src/app/modules/dashboard/component/dashboard.component.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="chart-card" *ngIf="showCostAnalysis">
-                <div class="chart-title">Análisis de Costos y Ganancia</div>
+                <div class="chart-title">Análisis de Ingresos</div>
                 <div class="chart-container">
                     <canvas #barChart></canvas>
                 </div>
